# alpha_suite

./: LICENSE  README.md
c-tools/guardalloc/: CMakeLists.txt  guardalloc.c
go-tools/dirbuster/: go.mod  main.go
go-tools/portscan/: go.mod  main.go  portscan
go-tools/subenum/: go.mod  main.go  subenum
nuclei-templates/cves/: cve-2021-44228-log4j.yaml  cve-2023-22515-confluence-auth-bypass.yaml
nuclei-templates/exposures/: admin-panel-exposure.yaml  sensitive-files.yaml
nuclei-templates/misconfigs/: cors-misconfiguration.yaml  directory-listing.yaml  server-info-disclosure.yaml
nuclei-templates/vulnerabilities/: open-redirect.yaml  sql-injection-error.yaml  xss-reflected.yaml
scripts/: build.sh  recon.sh
wordlists/: directories.txt  subdomains.txt
